--- a/BloomAlert/templates/auth.html
+++ b/BloomAlert/templates/auth.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<style>
   /* === Cherry Blossom Login/Register Page === */
   body {
     margin: 0;
@@ -221,4 +221,5 @@
   });
 </script>
 {% endblock %}
+
 
